# nearby-guide-data

./: .gitignore  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  MEDIA_LICENSES.md  RATING_RUBRIC.md  README.md  catalog.json  pyproject.toml  requirements-dev.txt
.github/workflows/: release-packs.yml  validate.yml
public/: viewer_data.json
regions/jp/ishigaki/: pack.yaml
regions/jp/ishigaki/points/: jp-ishigaki-730-monument.yaml  jp-ishigaki-banna-park.yaml  jp-ishigaki-fusaki-beach.yaml  jp-ishigaki-hirakubo-lighthouse.yaml  jp-ishigaki-iriomote-mangrove.yaml  jp-ishigaki-iriomote-yubu.yaml  jp-ishigaki-ishigaki-beef.yaml  jp-ishigaki-kabira-bay.yaml  jp-ishigaki-kabira-glass-boat.yaml  jp-ishigaki-kohama-island.yaml  jp-ishigaki-mangrove-futsuu.yaml  jp-ishigaki-manta-scramble.yaml  jp-ishigaki-minsa-weaving.yaml  jp-ishigaki-miyara-dunchi.yaml  jp-ishigaki-observatory.yaml  jp-ishigaki-public-market.yaml  jp-ishigaki-shiraho-beach.yaml  jp-ishigaki-souvenir-street.yaml  jp-ishigaki-stalactite-cave.yaml  jp-ishigaki-sukuji-beach.yaml  jp-ishigaki-sup-mangrove.yaml  (+9 more)
regions/jp/miyako-jima/: pack.yaml
regions/tw/hsinchu/: pack.yaml
schemas/: catalog-v1.schema.json  manifest-v1.schema.json  points-v1.schema.json  source-pack-v1.schema.json  source-point-v1.schema.json
taxonomy/: kinds.yaml  tags.yaml
tests/: test_validate.py
tools/: add_google_maps_urls.py  build_packs.py  check_generated.py  download_images.py  export_viewer_data.py  gen_media_licenses.py  geocode_check.py  image_metadata_cache.json  inspect_pack.py  update_catalog.py  validate.py
(+129 files in other folders)
